--- a/ApartmentsSubscribeService/ApartmentsSubscribeService.csproj
+++ b/ApartmentsSubscribeService/ApartmentsSubscribeService.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.10" />
     <PackageReference Include="Selenium.WebDriver" Version="4.11.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
 </Project>
