--- a/ApartmentsSubscribeService/Properties/launchSettings.json
+++ b/ApartmentsSubscribeService/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/subscribe?email=fox@mail.ru",
+      "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5285",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
